2016-07-01  Qian Yun  <oldk1331@gmail.com>

	* src/interp/i-syscmd.boot,
	src/share/doc/msgs/s2-us.msgs: More informative help
	about help

2016-06-28  Qian Yun  <oldk1331@gmail.com>

	* src/interp/database.boot, src/interp/i-syscmd.boot,
	src/interp/util.lisp: Evaluate predicates in ')show'

2016-06-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
	    Qian Yun  <oldk1331@gmail.com>

	* src/algebra/list.spad: Simplify 'concat!'

2016-06-28  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/integer.spad: Make NonNegativeInteger
	and PositiveInteger coercible to InputForm

2016-06-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rdeefx.spad: Simplify

2016-06-25  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/tree.spad: Implement missing functions

2016-06-24  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/aggcat.spad, src/algebra/bags.spad,
	src/algebra/jet.spad, src/algebra/newdata.spad,
	src/algebra/outform2.spad, src/algebra/rec.spad:
	Simplify coercion to OutputForm

2016-06-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/constant.spad: Do not use 'trueEqual' for
	equality

2016-06-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/numarr.spad, src/algebra/u32vec.spad: Fix
	signature of 'qnew'

2016-06-16  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/mama.spad: Allow arbitrary lower bound

2016-06-16  Qian Yun  <oldk1331@gmail.com>

	* src/interp/i-syscmd.boot: Fix ')show TYPE'

2016-06-16  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/texmacs.spad: Fix slow complication and use
	  more efficient data structure

2016-06-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/doc/ht.awk: Fix incompatibility with mawk

2016-06-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mama.spad: Generalise MatrixManipulation

2016-06-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: Fix a race

2016-06-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Use Kaltofen-Soup method during factorization