@@ -1,6 +1,6 @@
 VPATH=@srcdir@
 ALDOR=@ALDOR@
-INTERPSYS = DAASE=$(fricas_targetdir) $(fricas_target_bindir)/AXIOMsys
+INTERPSYS = DAASE=$(fricas_targetdir) FRICAS_INITFILE='' $(fricas_target_bindir)/AXIOMsys
 
 # We assume here that the directory 'al' has already been created.
 default: al/libaxiom.al
