@@ -1,7 +1,7 @@
 VPATH=@srcdir@
 ALDOR=@ALDOR@
 ALDOR_datadir=@ALDOR_datadir@
-INTERPSYS = DAASE=$(fricas_targetdir) $(fricas_target_bindir)/AXIOMsys
+INTERPSYS = DAASE=$(fricas_targetdir) FRICAS_INITFILE='' $(fricas_target_bindir)/AXIOMsys
 
 # We assume that the file al/libaxiom.al is up-to-date.
 # ${ALDOR_datadir}/lib/libfoam.al must exist.
