@@ -1,3 +1,9 @@
+2016-07-03  Qian Yun  <oldk1331@gmail.com>
+
+	Fix build problems due to .fricas.input
+	* src/interp/i-toplev.boot: Implement FRICAS_INITFILE
+	*/Makefile.in: Use it
+
 2016-07-01  Qian Yun  <oldk1331@gmail.com>
 
 	* src/interp/i-syscmd.boot,
